# tree-sitter-javascript

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Instagram  Makefile  Package.swift  README.md  a.out.js  a.out.wasm  binding.gyp  build.rs  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  query.scm  setup.py  tests.js  tree-sitter-javascript.wasm  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  lint.yml
bindings/c/: tree-sitter-javascript.pc  tree-sitter-javascript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js  javascript.js  jsx.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_javascript/: __init__.py  __init__.pyi  binding.c
bindings/rust/: README.md  build.rs  lib.rs
common/: define-grammar.js  scanner.h
corpus/: expressions.txt  literals.txt  statements.txt
grammar_test/: expressions.txt
javascript/: grammar.js  package.json
javascript/src/: grammar.json  node-types.json  parser.c  scanner.c
jsx/: grammar.js  package.json
jsx/src/: grammar.json  parser.c  scanner.c
jsx/test/: highlight  tags
properties/: definitions.css
queries/: highlights.scm  injections.scm  locals.scm  tags.scm
script/: known_failures.txt  known_failures_test262.txt  parse-examples  test262.js
src/: definitions.json  grammar.json  lib.rs  node-types.json  parser.c  scanner.c
src/tree_sitter/: parser.h
test/corpus/: destructuring.txt  expressions.txt  literals.txt  semicolon_insertion.txt  statements.txt
test/highlight/: imports.js
(+5 files in other folders)
